--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta chraset="UTF-8" />
   <meta name="viewport" content="width=device-width">	
   <link rel="stylesheet" href="css/reset.css">
+  <title>Jogo de Adivinha </title
   <link rel="stylesheet" href="css/adivinha_mais.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
